Button section was improved

--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>UralCTF</title>
-    <link href="static/css/bundle.css" rel="stylesheet">
-    <link href="static/css/tyumenctf.css" rel="stylesheet">
+    <link href="/static/css/bundle.css" rel="stylesheet">
+    <link href="/static/css/tyumenctf.css" rel="stylesheet">
     <link rel="shortcut icon" href="https://uralctf.org/favicon.ico" type="image/x-icon">
     <style>#preloader {
         background: #1C1C1C url("/static/images/bg.webp") 100% 100%;
@@ -103,7 +103,7 @@
                         <div class="bottom-contact-button-line">
                             <ul class="bottom-contact-list">
                                 <li>
-                                    <a href="https://t.me/uralctf" target="_blank" title="Telegram"
+                                    <a href="https://t.me/tyumenctf" target="_blank" title="Telegram"
                                        class="bottom-contact-item bottom-contact-telegram">Telegram</a>
                                 </li>
                                 <li>
