--- a/TyumenCTF.html
+++ b/TyumenCTF.html
@@ -346,7 +346,7 @@ window.onload = function () {
                         <div class="bottom-contact-button-line">
                             <ul class="bottom-contact-list">
                                 <li>
-                                    <a href="https://t.me/uralctf" target="_blank" title="Telegram"
+                                    <a href="https://t.me/tyumenctf" target="_blank" title="Telegram"
                                        class="bottom-contact-item bottom-contact-telegram">Telegram</a>
                                 </li>
                                 <li>
