--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     }</style>
     <script type="text/javascript" src="TyumenCTF_files/openapi.js.Без названия"></script>
     <script type="text/javascript">VK.init({apiId: 6687531, onlyWidgets: true});</script>
-    <link href="static/css/bundle.css" rel="stylesheet">
-    <link href="static/css/tyumenctf.css" rel="stylesheet">
-    <link href="static/css/perspective.css" rel="stylesheet">
+    <link href="/static/css/bundle.css" rel="stylesheet">
+    <link href="/static/css/tyumenctf.css" rel="stylesheet">
+    <link href="/static/css/perspective.css" rel="stylesheet">
     <script type="text/javascript" src="TyumenCTF_files/json.txt" async=""></script>
     <style type="text/css" data-ymaps="css-modules">.ymaps-2-1-79-copyright {
         position: relative;
@@ -86,9 +86,9 @@
             <div class="head-middle head-right">
                 <nav class="head-nav">
                     <ul>
-                        <li><a href="/about.html">О мероприятии</a></li>
-                        <li><a href="/schedule">Программа</a></li>
-                        <li><a href="/places">Площадки</a></li>
+                        <li><a href="about.html">О мероприятии</a></li>
+                        <li><a href="schedule.html">Программа</a></li>
+                        <li><a href="places">Площадки</a></li>
                         <li><a href="/members">Участники</a></li>
                         <li><a href="/registration">Регистрация</a></li>
                     </ul>
@@ -232,7 +232,7 @@
                     </style>
                     <div class="perspective-wrapper">
                         <div class="perspective-container">
-                            <a class="perspective-block first-perspective-block"></a>
+                            <a class="perspective-block first-perspective-block" href="about.html"></a>
                             <button class="perspective-block second-perspective-block"></button>
                             <button class="perspective-block third-perspective-block"></button>
                             <button class="perspective-block fourth-perspective-block"></button>
@@ -261,7 +261,7 @@
                         <div class="bottom-contact-button-line">
                             <ul class="bottom-contact-list">
                                 <li>
-                                    <a href="https://t.me/uralctf" target="_blank" title="Telegram"
+                                    <a href="https://t.me/tyumenctf" target="_blank" title="Telegram"
                                        class="bottom-contact-item bottom-contact-telegram">Telegram</a>
                                 </li>
                                 <li>
