All tabs were added

--- a/TyumenCTF.html
+++ b/TyumenCTF.html
@@ -237,7 +237,7 @@ window.onload = function () {
                             <div class="left-container">
                                 <div class="group-btns">
                                     <div class="btn-medium margin-right">
-                                        <a href="https://vk.com/uralctf" target="_blank"></a>
+                                        <a href="https://vk.com/tyumenctf" target="_blank"></a>
                                         <div class="btn-medium-content">
                                             <i class="fab tctf-vkontakte"></i>
                                         </div>
@@ -336,10 +336,10 @@ window.onload = function () {
                 <div>
                     <div class="bottom-copyright-block">
                         <div class="button-contact-email-line">
-                            По вопросам техподдержки и проблем с заданиями <a href="mailto:org@uralctf.org">org@uralctf.org</a>
+                            По вопросам техподдержки и проблем с заданиями <a href="CTF@utmn.ru">CTF@utmn.ru</a>
                         </div>
                         <div class="button-contact-email-line">
-                            По организационным вопросам <a href="mailto:org@uralctf.org">org@uralctf.org</a>
+                            По организационным вопросам <a href="mailto:CTF@utmn.ru">CTF@utmn.ru</a>
                         </div>
                     </div>
                     <div class="bottom-contacts-block">
@@ -350,7 +350,7 @@ window.onload = function () {
                                        class="bottom-contact-item bottom-contact-telegram">Telegram</a>
                                 </li>
                                 <li>
-                                    <a href="https://vk.com/uralctf" target="_blank" title="VK"
+                                    <a href="https://vk.com/tyumenctf" target="_blank" title="VK"
                                        class="bottom-contact-item bottom-contact-vk">VK</a>
                                 </li>
                             </ul>
