--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>UralCTF</title>
-    <link href="/static/css/bundle.css" rel="stylesheet">
-    <link href="/static/css/tyumenctf.css" rel="stylesheet">
+    <title>TyumenCTF</title>
+    <link href="static/css/bundle.css" rel="stylesheet">
+    <link href="static/css/tyumenctf.css" rel="stylesheet">
     <link rel="shortcut icon" href="https://uralctf.org/favicon.ico" type="image/x-icon">
     <style>#preloader {
         background: #1C1C1C url("/static/images/bg.webp") 100% 100%;
@@ -30,7 +30,7 @@
         width: 235px;
         display: inline-block;
         margin-bottom: 30px;
-        background: url("/static/images/horiz-logo-white.svg") no-repeat;
+        background: url("/static/images/UpperLeftLogoDark.svg") no-repeat;
     }</style>
 </head>
 <body style="overflow: auto;">
@@ -40,17 +40,18 @@
             <div class="head-middle head-right">
                 <nav class="head-nav">
                     <ul>
-                        <li><a href="/about.html" class="active" aria-current="page">О мероприятии</a>
+                        <li><a href="about.html" class="active" aria-current="page">О мероприятии</a>
                         </li>
-                        <li><a href="/schedule">Программа</a></li>
-                        <li><a href="/places">Площадки</a></li>
-                        <li><a href="/members">Участники</a></li>
-                        <li><a href="/registration">Регистрация</a></li>
+                        <li><a href="schedule.html">Программа</a></li>
+                        <li><a href="places.html">Площадки</a></li>
+                        <li><a href="members.html">Участники</a></li>
+                        <li><a href="registration.html">Регистрация</a></li>
                     </ul>
                 </nav>
             </div>
-            <div class="head-middle"><a href="https://uralctf.org/">
-                <div class="logo uctf-horiz-logo"></div>
+            <div class="head-middle"><a href="index.html">
+                <div class="head-middle"><a href="index.html"><img src="static/images/UpperLeftLogoDark.svg"
+                                                          style="height: 60px; width: 60px; padding-left: 27px; object-fit: cover"></a></div>
             </a></div>
             <div class="clearfix"></div>
         </div>
@@ -62,7 +63,7 @@
                 <h3 style="text-align: center; margin-top: 50px;">Школьный этап</h3>
                 <p>Соревнование пройдет 15 октября 2023 г. в онлайн формате (для школьников и студентов ССУЗов) в рамках
                     цифрового форума/выставки «ИНФОТЕХ 2023»</p>
-                <p><b><a href="https://uralctf.org/registration">Регистрация</a></b> заканчивается 13 октября 23:59 МСК
+                <p><b><a href="registration.html">Регистрация</a></b> заканчивается 13 октября 23:59 МСК
                 </p>
                 <h3 style="text-align: center; margin-top: 50px;">Школьный этап</h3>
                 <ul>
@@ -93,10 +94,10 @@
                 <div>
                     <div class="bottom-copyright-block">
                         <div class="button-contact-email-line">
-                            По вопросам техподдержки и проблем с заданиями <a href="mailto:org@uralctf.org">org@uralctf.org</a>
+                            По вопросам техподдержки и проблем с заданиями <a href="mailto:CTF@utmn.ru">CTF@utmn.ru</a>
                         </div>
                         <div class="button-contact-email-line">
-                            По организационным вопросам <a href="mailto:org@uralctf.org">org@uralctf.org</a>
+                            По организационным вопросам <a href="mailto:CTF@utmn.ru">CTF@utmn.ru</a>
                         </div>
                     </div>
                     <div class="bottom-contacts-block">
@@ -107,7 +108,7 @@
                                        class="bottom-contact-item bottom-contact-telegram">Telegram</a>
                                 </li>
                                 <li>
-                                    <a href="https://vk.com/uralctf" target="_blank" title="VK"
+                                    <a href="https://vk.com/tyumenctf" target="_blank" title="VK"
                                        class="bottom-contact-item bottom-contact-vk">VK</a>
                                 </li>
                             </ul>
