--- a/schedule.html
+++ b/schedule.html
@@ -6,7 +6,7 @@
     <title>UralCTF</title>
     <link rel="shortcut icon" href="https://uralctf.org/favicon.ico" type="image/x-icon">
     <style>#preloader {
-        background: #016 url("/static/images/bg.png") 100% 100%;
+        background: #1C1C1C url("/static/images/bg.webp") 100% 100%;
         position: absolute;
         display: table;
         top: 0;
@@ -47,15 +47,15 @@ window.onload = function () {
             <div class="head-middle head-right">
                 <nav class="head-nav">
                     <ul>
-                        <li><a href="/about.html">О мероприятии</a></li>
-                        <li><a href="/schedule.html" class="active" aria-current="page">Программа</a></li>
-                        <li><a href="https://uralctf.org/places">Площадки</a></li>
-                        <li><a href="https://uralctf.org/members">Участники</a></li>
-                        <li><a href="https://uralctf.org/registration">Регистрация</a></li>
+                        <li><a href="about.html">О мероприятии</a></li>
+                        <li><a href="schedule.html" class="active" aria-current="page">Программа</a></li>
+                        <li><a href="places.html">Площадки</a></li>
+                        <li><a href="members.html">Участники</a></li>
+                        <li><a href="registration.html">Регистрация</a></li>
                     </ul>
                 </nav>
             </div>
-            <div class="head-middle"><a href="https://uralctf.org/">
+            <div class="head-middle"><a href="index.html">
                 <div class="logo uctf-horiz-logo"></div>
             </a></div>
             <div class="clearfix"></div>
@@ -112,10 +112,10 @@ window.onload = function () {
                 <div>
                     <div class="bottom-copyright-block">
                         <div class="button-contact-email-line">
-                            По вопросам техподдержки и проблем с заданиями <a href="mailto:org@uralctf.org">org@uralctf.org</a>
+                            По вопросам техподдержки и проблем с заданиями <a href="mailto:CTF@utmn.ru">CTF@utmn.ru</a>
                         </div>
                         <div class="button-contact-email-line">
-                            По организационным вопросам <a href="mailto:org@uralctf.org">org@uralctf.org</a>
+                            По организационным вопросам <a href="mailto:CTF@utmn.ru">CTF@utmn.ru</a>
                         </div>
                     </div>
                     <div class="bottom-contacts-block">
@@ -126,7 +126,7 @@ window.onload = function () {
                                        class="bottom-contact-item bottom-contact-telegram">Telegram</a>
                                 </li>
                                 <li>
-                                    <a href="https://vk.com/uralctf" target="_blank" title="VK"
+                                    <a href="https://vk.com/tyumenctf" target="_blank" title="VK"
                                        class="bottom-contact-item bottom-contact-vk">VK</a>
                                 </li>
                             </ul>
