--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     }</style>
     <script type="text/javascript" src="TyumenCTF_files/openapi.js.Без названия"></script>
     <script type="text/javascript">VK.init({apiId: 6687531, onlyWidgets: true});</script>
-    <link href="/static/css/bundle.css" rel="stylesheet">
-    <link href="/static/css/tyumenctf.css" rel="stylesheet">
-    <link href="/static/css/perspective.css" rel="stylesheet">
+    <link href="static/css/bundle.css" rel="stylesheet">
+    <link href="static/css/tyumenctf.css" rel="stylesheet">
+    <link href="static/css/perspective.css" rel="stylesheet">
     <script type="text/javascript" src="TyumenCTF_files/json.txt" async=""></script>
     <style type="text/css" data-ymaps="css-modules">.ymaps-2-1-79-copyright {
         position: relative;
@@ -79,7 +79,7 @@
         left: -11px;
     }</style>
 </head>
-<body style="overflow: auto;">
+<body style="overflow: hidden;">
 <div id="app" class="index">
     <header class="head">
         <div class="page-border">
@@ -88,13 +88,13 @@
                     <ul>
                         <li><a href="about.html">О мероприятии</a></li>
                         <li><a href="schedule.html">Программа</a></li>
-                        <li><a href="places">Площадки</a></li>
-                        <li><a href="/members">Участники</a></li>
-                        <li><a href="/registration">Регистрация</a></li>
+                        <li><a href="places.html">Площадки</a></li>
+                        <li><a href="members.html">Участники</a></li>
+                        <li><a href="registration.html">Регистрация</a></li>
                     </ul>
                 </nav>
             </div>
-            <div class="head-middle"><a href="/"><img src="static/images/UpperLeftLogo.svg"
+            <div class="head-middle"><a href="index.html"><img src="static/images/UpperLeftLogo.svg"
                                                       style="height: 60px; width: 60px; object-fit: cover"></a></div>
             <div class="clearfix"></div>
         </div>
@@ -183,14 +183,14 @@
 
                         .subtitle-day {
                             font-size: 30pt;
-                            color: #000650;
+                            color: #771225;
                             text-align: center;
                             line-height: 1;
                         }
 
                         .subtitle-month {
                             font-size: 14pt;
-                            color: #000650;
+                            color: #771225;
                             text-align: center;
                             font-variant: all-small-caps;
                         }
@@ -238,8 +238,8 @@
                             <button class="perspective-block fourth-perspective-block"></button>
                             <button class="perspective-block fifth-perspective-block"></button>
                             <button class="perspective-block sixth-perspective-block"></button>
+                            <img src="static/images/tctfMainLogo.svg" class="perspective-logo" alt="">
                         </div>
-                        <img src="static/images/tctfMainLogo.svg" class="perspective-logo" alt="">
                     </div>
                 </div>
             </div>
@@ -251,10 +251,10 @@
                 <div>
                     <div class="bottom-copyright-block">
                         <div class="button-contact-email-line">
-                            По вопросам техподдержки и проблем с заданиями <a href="mailto:org@uralctf.org">org@uralctf.org</a>
+                            По вопросам техподдержки и проблем с заданиями <a href="mailto:CTF@utmn.ru">CTF@utmn.ru</a>
                         </div>
                         <div class="button-contact-email-line">
-                            По организационным вопросам <a href="mailto:org@uralctf.org">org@uralctf.org</a>
+                            По организационным вопросам <a href="mailto:CTF@utmn.ru">CTF@utmn.ru</a>
                         </div>
                     </div>
                     <div class="bottom-contacts-block">
@@ -265,7 +265,7 @@
                                        class="bottom-contact-item bottom-contact-telegram">Telegram</a>
                                 </li>
                                 <li>
-                                    <a href="https://vk.com/uralctf" target="_blank" title="VK"
+                                    <a href="https://vk.com/tyumenctf" target="_blank" title="VK"
                                        class="bottom-contact-item bottom-contact-vk">VK</a>
                                 </li>
                             </ul>
