Places tab was edited / Button styles were added

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                 </p>
                 <h3 style="text-align: center; margin-top: 50px;">Школьный этап</h3>
                 <ul>
-                    <li><a href="https://uralctf.org/places">Площадки</a></li>
+                    <li><a href="places.html">Площадки</a></li>
                     <li>Онлайн</li>
                 </ul>
                 <h3 style="text-align: center; margin-top: 50px;">Организаторы</h3>
