--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@
                     </style>
                     <div class="perspective-wrapper">
                         <div class="perspective-container">
-                            <a class="perspective-block first-perspective-block" href="about.html"></a>
-                            <button class="perspective-block second-perspective-block"></button>
-                            <button class="perspective-block third-perspective-block"></button>
+                            <a class="perspective-block first-perspective-block" target="_blank" href="about.html" ></a>
+                            <a class="perspective-block second-perspective-block" href=""></a>
+                            <a class="perspective-block third-perspective-block" href="https://vk.com/tyumenctf" title="VK"></a>
                             <button class="perspective-block fourth-perspective-block"></button>
                             <button class="perspective-block fifth-perspective-block"></button>
                             <button class="perspective-block sixth-perspective-block"></button>
