--- a/places.html
+++ b/places.html
@@ -36,9 +36,9 @@
         margin-bottom: 30px;
         background: url("/static/images/horiz-logo-white.svg") no-repeat;
     }</style>
-    <link href="./places_files/bundle.css" rel="stylesheet">
-    <link href="./places_files/uralctf.css" rel="stylesheet">
-    <script type="text/javascript" src="./places_files/json.txt" async=""></script>
+    <link href="static/css/bundle.css" rel="stylesheet">
+    <link href="static/css/tyumenctf.css" rel="stylesheet">
+    <script type="text/javascript" src="./TyumenCTF_files/json.txt" async=""></script>
     <style type="text/css" data-ymaps="css-modules">.ymaps-2-1-79-copyright {
         position: relative;
         z-index: 1;
@@ -5373,7 +5373,7 @@
     }</style>
 </head>
 <body style="overflow: auto;">
-<script>document.body.style.overflow = "hidden";
+<script>document.body.style.overflow = "auto";
 window.onload = function () {
     document.getElementById("preloader").remove();
     document.body.style.overflow = "auto";
@@ -5384,16 +5384,17 @@ window.onload = function () {
             <div class="head-middle head-right">
                 <nav class="head-nav">
                     <ul>
-                        <li><a href="https://uralctf.org/about">О мероприятии</a></li>
-                        <li><a href="https://uralctf.org/schedule">Программа</a></li>
-                        <li><a href="https://uralctf.org/places" class="active" aria-current="page">Площадки</a></li>
-                        <li><a href="https://uralctf.org/members">Участники</a></li>
-                        <li><a href="https://uralctf.org/registration">Регистрация</a></li>
+                        <li><a href="about.html">О мероприятии</a></li>
+                        <li><a href="schedule.html">Программа</a></li>
+                        <li><a href="places.html" class="active" aria-current="page">Площадки</a></li>
+                        <li><a href="members.html">Участники</a></li>
+                        <li><a href="registration.html">Регистрация</a></li>
                     </ul>
                 </nav>
             </div>
-            <div class="head-middle"><a href="https://uralctf.org/">
-                <div class="logo uctf-horiz-logo"></div>
+            <div class="head-middle"><a href="index.html">
+                <div class="head-middle"><a href="index.html"><img src="static/images/UpperLeftLogoDark.svg"
+                                                                   style="height: 60px; width: 60px; padding-left: 27px; object-fit: cover"></a></div>
             </a></div>
             <div class="clearfix"></div>
         </div>
@@ -5825,21 +5826,21 @@ window.onload = function () {
                 <div>
                     <div class="bottom-copyright-block">
                         <div class="button-contact-email-line">
-                            По вопросам техподдержки и проблем с заданиями <a href="mailto:org@uralctf.org">org@uralctf.org</a>
+                            По вопросам техподдержки и проблем с заданиями <a href="mailto:CTF@utmn.ru">CTF@utmn.ru</a>
                         </div>
                         <div class="button-contact-email-line">
-                            По организационным вопросам <a href="mailto:org@uralctf.org">org@uralctf.org</a>
+                            По организационным вопросам <a href="mailto:CTF@utmn.ru">CTF@utmn.ru</a>
                         </div>
                     </div>
                     <div class="bottom-contacts-block">
                         <div class="bottom-contact-button-line">
                             <ul class="bottom-contact-list">
                                 <li>
-                                    <a href="https://t.me/uralctf" target="_blank" title="Telegram"
+                                    <a href="https://t.me/tyumenctf" target="_blank" title="Telegram"
                                        class="bottom-contact-item bottom-contact-telegram">Telegram</a>
                                 </li>
                                 <li>
-                                    <a href="https://vk.com/uralctf" target="_blank" title="VK"
+                                    <a href="https://vk.com/tyumenctf" target="_blank" title="VK"
                                        class="bottom-contact-item bottom-contact-vk">VK</a>
                                 </li>
                             </ul>
@@ -5852,6 +5853,6 @@ window.onload = function () {
     </footer>
 </div>
 <script>window.serverState = {registrationClosed: true};</script>
-<script type="text/javascript" src="./places_files/bundle.js.Без названия"></script>
+<script type="text/javascript" src="./TyumenCTF_files/bundle.js.Без названия"></script>
 </body>
 </html>
