--- a/TyumenCTF.html
+++ b/TyumenCTF.html
@@ -29,7 +29,7 @@
         margin-bottom: 30px;
         background: url("/static/images/UpperLeftLogo.svg") no-repeat;
     }</style>
-    <script type="text/javascript" src="TyumenCTF_files/openapi.js.Без названия"></script>
+    <script type="text/javascript" src="TyumenCTF_files/openapi.js"></script>
     <script type="text/javascript">VK.init({apiId: 6687531, onlyWidgets: true});</script>
     <link href="static/css/bundle.css" rel="stylesheet">
     <link href="static/css/tyumenctf.css" rel="stylesheet">
