--- a/schedule.html
+++ b/schedule.html
@@ -30,7 +30,7 @@
         margin-bottom: 30px;
         background: url("/static/images/horiz-logo-white.svg") no-repeat;
     }</style>
-    <script type="text/javascript" src="./UralCTF_files/openapi.js.Без названия"></script>
+    <script type="text/javascript" src="./TyumenCTF_files/openapi.js.Без названия"></script>
     <script type="text/javascript">VK.init({apiId: 6687531, onlyWidgets: true});</script>
     <link href="static/css/bundle.css" rel="stylesheet">
     <link href="static/css/tyumenctf.css" rel="stylesheet">
@@ -56,7 +56,8 @@ window.onload = function () {
                 </nav>
             </div>
             <div class="head-middle"><a href="index.html">
-                <div class="logo uctf-horiz-logo"></div>
+                <div class="head-middle"><a href="index.html"><img src="static/images/UpperLeftLogoDark.svg"
+                                                                   style="height: 60px; width: 60px; padding-left: 27px; object-fit: cover"></a></div>
             </a></div>
             <div class="clearfix"></div>
         </div>
@@ -139,6 +140,6 @@ window.onload = function () {
     </footer>
 </div>
 <script>window.serverState = {registrationClosed: true};</script>
-<script type="text/javascript" src="./UralCTF_files/bundle.js.Без названия"></script>
+<script type="text/javascript" src="./TyumenCTF_files/bundle.js.Без названия"></script>
 </body>
 </html>
