Index.html reworked

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>TyumenCTF</title>
     <link href="static/css/bundle.css" rel="stylesheet">
     <link href="static/css/tyumenctf.css" rel="stylesheet">
-    <link rel="shortcut icon" href="https://uralctf.org/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/static/images/UpperLeftLogo.svg" type="image/x-icon">
     <style>#preloader {
         background: #1C1C1C url("/static/images/bg.webp") 100% 100%;
         position: absolute;
