--- a/registration.html
+++ b/registration.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>UralCTF</title>
-    <link rel="shortcut icon" href="https://uralctf.org/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/static/images/UpperLeftLogo.svg" type="image/x-icon">
     <style>#preloader {
         background: #016 url("/static/images/bg.png") 100% 100%;
         position: absolute;
