--- a/members.html
+++ b/members.html
@@ -7,7 +7,7 @@
     <script charset="utf-8" src="./participants_files/tiles(1)"></script>
     <script charset="utf-8" src="./participants_files/tiles(2)"></script>
     <title>UralCTF</title>
-    <link rel="shortcut icon" href="https://uralctf.org/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/static/images/UpperLeftLogo.svg" type="image/x-icon">
     <style>#preloader {
         background: #016 url("/static/images/bg.png") 100% 100%;
         position: absolute;
