--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>TyumenCTF</title>
     <link href="static/css/bundle.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="static/css/tyumenctf.css" rel="stylesheet">
     <link rel="shortcut icon" href="/static/images/UpperLeftLogo.svg" type="image/x-icon">
     <style>#preloader {
@@ -33,7 +34,7 @@
         background: url("/static/images/UpperLeftLogoDark.svg") no-repeat;
     }</style>
 </head>
-<body style="overflow: auto;">
+<body>
 <div id="app" class="">
     <header class="head">
         <div class="page-border">
@@ -44,14 +45,13 @@
                         </li>
                         <li><a href="schedule.html">Программа</a></li>
                         <li><a href="places.html">Площадки</a></li>
-                        <li><a href="members.html">Участники</a></li>
-                        <li><a href="registration.html">Регистрация</a></li>
                     </ul>
                 </nav>
             </div>
             <div class="head-middle"><a href="index.html">
                 <div class="head-middle"><a href="index.html"><img src="static/images/UpperLeftLogoDark.svg"
-                                                          style="height: 60px; width: 60px; padding-left: 27px; object-fit: cover"></a></div>
+                                                                   style="height: 60px; width: 60px; padding-left: 27px; object-fit: cover"></a>
+                </div>
             </a></div>
             <div class="clearfix"></div>
         </div>
@@ -84,7 +84,6 @@
                 </div>
                 <div class="clearfix"></div>
                 <h3 style="text-align: center; margin-top: 20px;">Задания могут относиться к категориям</h3>
-                <div class="about-categories-list"></div>
             </div>
         </div>
     </main>
