--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TyumenCTF</title>
     <link rel="shortcut icon" href="/static/images/UpperLeftLogo.svg" type="image/x-icon">
     <style>#preloader {
@@ -79,31 +80,23 @@
         left: -11px;
     }</style>
 </head>
-<body style="overflow: hidden;">
+<body>
 <div id="app" class="index">
     <header class="head">
-        <div class="page-border">
-            <div class="head-middle head-right">
+        <div class="page-border header-main">
                 <nav class="head-nav">
                     <ul>
                         <li><a href="about.html">О мероприятии</a></li>
                         <li><a href="schedule.html">Программа</a></li>
                         <li><a href="places.html">Площадки</a></li>
-                        <li><a href="members.html">Участники</a></li>
-                        <li><a href="registration.html">Регистрация</a></li>
                     </ul>
                 </nav>
-            </div>
-            <div class="head-middle"><a href="index.html"><img src="static/images/UpperLeftLogo.svg"
-                                                               style="height: 60px; width: 60px; object-fit: cover"></a>
-            </div>
-            <div class="clearfix"></div>
         </div>
     </header>
     <main class="main">
         <div style="display: table-cell; vertical-align: middle;">
-            <div class="page-border-big">
-                <div>
+            <div class="page-border-big main-page-content">
+                <div class="logo-wrapper">
                     <style>
                         .p-0 {
                             padding: 0 !important;
@@ -231,7 +224,7 @@
                             background: rgba(0, 0, 0, 0.3);
                         }
                     </style>
-                    <svg width="1037" height="936" viewBox="0 0 1037 936" fill="none"
+                    <svg width="100%" viewBox="0 0 1037 936" fill="none"
                          xmlns="http://www.w3.org/2000/svg">
                         <path d="M479.518 600.866C465.557 589.022 456.06 578.055 451.812 572.93C438.737 557.167 429.93 542.12 424.096 530.465C412.23 506.769 407.142 482.498 405.914 476.647C397.475 436.613 401.279 396.692 402.667 384.312C392.783 399.453 382.9 414.603 373.006 429.744C373.082 439.053 373.771 451.33 376.235 465.538C376.726 468.365 378.803 480.076 384.032 496.895C387.214 507.127 392.859 525.264 403.554 545.323C421.962 579.864 443.193 600.065 448.867 605.303C461.969 616.892 482.067 634.455 512.983 651.49C537.348 664.916 559.702 673.207 577.091 678.436C564.158 664.68 551.216 650.915 538.283 637.159C511.18 625.438 491.819 611.286 479.528 600.866H479.518Z"
                               fill="#F2F2F2"/>
