--- a/schedule.html
+++ b/schedule.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>UralCTF</title>
     <link rel="shortcut icon" href="https://uralctf.org/favicon.ico" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>#preloader {
         background: #1C1C1C url("/static/images/bg.webp") 100% 100%;
         position: absolute;
@@ -35,12 +36,7 @@
     <link href="static/css/bundle.css" rel="stylesheet">
     <link href="static/css/tyumenctf.css" rel="stylesheet">
 </head>
-<body style="overflow: auto;">
-<script>document.body.style.overflow = "hidden";
-window.onload = function () {
-    document.getElementById("preloader").remove();
-    document.body.style.overflow = "auto";
-};</script>
+<body>
 <div id="app" class="">
     <header class="head">
         <div class="page-border">
@@ -50,8 +46,6 @@ window.onload = function () {
                         <li><a href="about.html">О мероприятии</a></li>
                         <li><a href="schedule.html" class="active" aria-current="page">Программа</a></li>
                         <li><a href="places.html">Площадки</a></li>
-                        <li><a href="members.html">Участники</a></li>
-                        <li><a href="registration.html">Регистрация</a></li>
                     </ul>
                 </nav>
             </div>
