Mobile logo was fixed

--- a/about.html
+++ b/about.html
@@ -57,12 +57,14 @@
         </div>
     </header>
     <main class="main">
-        <div class="page-border"><h2 class="page-title">О мероприятии UralCTF 2023</h2>
-            <div class="about"><p><b>UralCTF</b> — это ежегодные межрегиональные открытые соревнования в области
-                информационной безопасности для школьников и студентов УрФО.</p>
-                <h3 style="text-align: center; margin-top: 50px;">Школьный этап</h3>
-                <p>Соревнование пройдет 15 октября 2023 г. в онлайн формате (для школьников и студентов ССУЗов) в рамках
-                    цифрового форума/выставки «ИНФОТЕХ 2023»</p>
+        <div class="page-border"><h2 class="page-title">О мероприятии TyumenCTF 2025</h2>
+            <div class="about"><p><b>TyumenCTF</b> — это первенство Тюменской области по спортивному программированию для школьников
+                в дисциплине «Программирование систем информационной безопасности».жегодные межрегиональные открытые
+                соревнования в области информационной безопасности для школьников и студентов УрФО.</p>
+                <p>В соревнованиях могут принимать участие школьники в возрасте от 14 до 17 лет, предварительно заполнив форму регистрации и прислав все необходимые документы. <br><br><br>
+                    Первенство пройдет 20 апреля 2025 года (воскресенье) в онлайн формате и приурочены к проведению 1-ой
+                    Межрегиональной конференции по информационной безопасности в Уральском федеральном округе «Инфофорум–Тюмень»,
+                    в рамках которого состоится награждение победителей.</p>
                 <p><b><a href="registration.html">Регистрация</a></b> заканчивается 13 октября 23:59 МСК
                 </p>
                 <h3 style="text-align: center; margin-top: 50px;">Школьный этап</h3>
