Not used parts of code removed / pages finished

--- a/schedule.html
+++ b/schedule.html
@@ -4,33 +4,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>UralCTF</title>
-    <link rel="shortcut icon" href="https://uralctf.org/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/static/images/UpperLeftLogo.svg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>#preloader {
-        background: #1C1C1C url("/static/images/bg.webp") 100% 100%;
-        position: absolute;
-        display: table;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 100;
-    }
-
-    #preloader .precell {
-        display: table-cell;
-        color: #fff;
-        vertical-align: middle;
-        text-align: center;
-    }
-
-    #preloader .prelogo {
-        height: 38px;
-        width: 235px;
-        display: inline-block;
-        margin-bottom: 30px;
-        background: url("/static/images/horiz-logo-white.svg") no-repeat;
-    }</style>
     <script type="text/javascript" src="./TyumenCTF_files/openapi.js.Без названия"></script>
     <script type="text/javascript">VK.init({apiId: 6687531, onlyWidgets: true});</script>
     <link href="static/css/bundle.css" rel="stylesheet">
@@ -49,34 +24,35 @@
                     </ul>
                 </nav>
             </div>
-            <div class="head-middle"><a href="index.html">
+            <div class="head-middle">< href="index.html">
                 <div class="head-middle"><a href="index.html"><img src="static/images/UpperLeftLogoDark.svg"
-                                                                   style="height: 60px; width: 60px; padding-left: 27px; object-fit: cover"></a></div>
-            </a></div>
-            <div class="clearfix"></div>
+                                                                   style="height: 50%; width: 50%; padding-left: 15px; padding-bottom: 20px; object-fit: cover"></a>
+                </div>
+                <div class="clearfix"></div>
+            </div>
         </div>
     </header>
     <main class="main">
-        <div class="page-border"><h2 class="page-title">Программа UralSchoolCTF 2023</h2>
+        <div class="page-border"><h2 class="page-title">Программа TyumenCTF 2025</h2>
             <div>
                 <div class="schedule">
                     <ul class="schedule-days">
                         <li>
-                            <div class="schedule-day-label">15 октября
+                            <div class="schedule-day-label">20 Апреля:
                                 <div class="rhombus"></div>
                             </div>
                             <div class="schedule-day-content">
                                 <div class="schedule-day-side">
-                                    <div class="schedule-day-title">Соревнования UralSchoolCTF</div>
+                                    <div class="schedule-day-title">Соревнования TyumenCTF</div>
                                     <ul class="schedule-day-timing">
-                                        <li><span class="schedule-day-time">11:00<span
+                                        <li><span class="schedule-day-time">10:30<span
                                                 class="schedule-day-tz"> ТМН</span></span><span
-                                                class="schedule-day-time">(9:00<span
+                                                class="schedule-day-time">(08:30<span
                                                 class="schedule-day-tz"> МСК)</span></span><span
                                                 class="schedule-day-time-name">Начало</span></li>
-                                        <li><span class="schedule-day-time">16:00<span
+                                        <li><span class="schedule-day-time">18:30<span
                                                 class="schedule-day-tz"> ТМН</span></span><span
-                                                class="schedule-day-time">(14:00<span
+                                                class="schedule-day-time">(16:30<span
                                                 class="schedule-day-tz"> МСК)</span></span><span
                                                 class="schedule-day-time-name">Окончание</span></li>
                                     </ul>
@@ -85,7 +61,7 @@
                             </div>
                         </li>
                         <li>
-                            <div class="schedule-day-label">18 октября
+                            <div class="schedule-day-label">23 Апреля
                                 <div class="rhombus"></div>
                             </div>
                             <div class="schedule-day-content">
@@ -107,10 +83,8 @@
                 <div>
                     <div class="bottom-copyright-block">
                         <div class="button-contact-email-line">
-                            По вопросам техподдержки и проблем с заданиями <a href="mailto:CTF@utmn.ru">CTF@utmn.ru</a>
-                        </div>
-                        <div class="button-contact-email-line">
-                            По организационным вопросам <a href="mailto:CTF@utmn.ru">CTF@utmn.ru</a>
+                            По вопросам техподдержки, проблем с заданиями или организационным вопросам пишите нам на
+                            почту: <a href="mailto:CTF@utmn.ru">CTF@utmn.ru</a>
                         </div>
                     </div>
                     <div class="bottom-contacts-block">
