--- a/about.html
+++ b/about.html
@@ -8,31 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="static/css/tyumenctf.css" rel="stylesheet">
     <link rel="shortcut icon" href="/static/images/UpperLeftLogo.svg" type="image/x-icon">
-    <style>#preloader {
-        background: #1C1C1C url("/static/images/bg.webp") 100% 100%;
-        position: absolute;
-        display: table;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 100;
-    }
-
-    #preloader .precell {
-        display: table-cell;
-        color: #fff;
-        vertical-align: middle;
-        text-align: center;
-    }
-
-    #preloader .prelogo {
-        height: 38px;
-        width: 235px;
-        display: inline-block;
-        margin-bottom: 30px;
-        background: url("/static/images/UpperLeftLogoDark.svg") no-repeat;
-    }</style>
 </head>
 <body>
 <div id="app" class="">
@@ -50,7 +25,7 @@
             </div>
             <div class="head-middle"><a href="index.html">
                 <div class="head-middle"><a href="index.html"><img src="static/images/UpperLeftLogoDark.svg"
-                                                                   style="height: 60px; width: 60px; padding-left: 27px; object-fit: cover"></a>
+                                                                   style="height: 50%; width: 50%; padding-left: 15px; padding-bottom: 20px; object-fit: cover"></a>
                 </div>
             </a></div>
             <div class="clearfix"></div>
@@ -65,8 +40,7 @@
                     Первенство пройдет 20 апреля 2025 года (воскресенье) в онлайн формате и приурочены к проведению 1-ой
                     Межрегиональной конференции по информационной безопасности в Уральском федеральном округе «Инфофорум–Тюмень»,
                     в рамках которого состоится награждение победителей.</p>
-                <p><b><a href="registration.html">Регистрация</a></b> заканчивается 13 октября 23:59 МСК
-                </p>
+                <p><b><a href="registration.html">Регистрация</a></b></p>
                 <h3 style="text-align: center; margin-top: 50px;">Школьный этап</h3>
                 <ul>
                     <li><a href="places.html">Площадки</a></li>
@@ -81,7 +55,7 @@
                 <div class="documents"><h3>Документы для школьников</h3>
                     <ul>
                         <li><a href="https://uralctf.org/static/files/Standing_order_school_2023.pdf">Положение о
-                            соревнованиях UralCTFSchool 2023</a></li>
+                            соревнованиях TyumenCTF 2025</a></li>
                     </ul>
                 </div>
                 <div class="clearfix"></div>
@@ -95,10 +69,8 @@
                 <div>
                     <div class="bottom-copyright-block">
                         <div class="button-contact-email-line">
-                            По вопросам техподдержки и проблем с заданиями <a href="mailto:CTF@utmn.ru">CTF@utmn.ru</a>
-                        </div>
-                        <div class="button-contact-email-line">
-                            По организационным вопросам <a href="mailto:CTF@utmn.ru">CTF@utmn.ru</a>
+                            По вопросам техподдержки, проблем с заданиями или организационным вопросам пишите нам на
+                            почту: <a href="mailto:CTF@utmn.ru">CTF@utmn.ru</a>
                         </div>
                     </div>
                     <div class="bottom-contacts-block">
