--- a/places.html
+++ b/places.html
@@ -6,32 +6,7 @@
     <title>TyumenCTF</title>
     <link rel="shortcut icon" href="/static/images/UpperLeftLogo.svg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>#preloader {
-        background: #016 url("/static/images/bg.webp") 100% 100%;
-        position: absolute;
-        display: table;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 100;
-    }
-
-    #preloader .precell {
-        display: table-cell;
-        color: #fff;
-        vertical-align: middle;
-        text-align: center;
-    }
-
-    #preloader .prelogo {
-        height: 38px;
-        width: 235px;
-        display: inline-block;
-        margin-bottom: 30px;
-        background: url("/static/images/horiz-logo-white.svg") no-repeat;
-    }
-
+    <style>
     .pc-map {
         display: block;
     }
@@ -73,16 +48,14 @@
                     </ul>
                 </nav>
             </div>
-            <div class="head-middle"><a href="index.html">
                 <div class="head-middle"><a href="index.html"><img src="static/images/UpperLeftLogoDark.svg"
-                                                                   style="height: 60px; width: 60px; padding-left: 27px; object-fit: cover"></a>
+                                                                   style="height: 50%; width: 50%; padding-left: 15px; padding-bottom: 20px; object-fit: cover"></a>
                 </div>
-            </a></div>
             <div class="clearfix"></div>
         </div>
     </header>
     <main class="main">
-        <div class="page-border"><h2 class="page-title">Площадки UralSchoolCTF 2023</h2>
+        <div class="page-border"><h2 class="page-title">Площадки TyumenCTF 2025</h2>
             <ul class="places">
                 <li class="place">
                     <div class="place-info">
@@ -91,10 +64,10 @@
                             <div class="line"></div>
                             <div class="info">
                                 <ul>
-                                    <li><b>15 октября</b><br>
+                                    <li><b>20 Апреля</b><br>
                                         <div class="action">Онлайн</div>
                                     </li>
-                                    <li><b>18 октября</b><br>
+                                    <li><b>23 Апреля</b><br>
                                         <div class="action">Награждение участников</div>
                                         <div>Тюменский ТЕХНОПАРК</div>
                                         <div>(ул. Республики, 142)</div>
@@ -139,10 +112,8 @@
                 <div>
                     <div class="bottom-copyright-block">
                         <div class="button-contact-email-line">
-                            По вопросам техподдержки и проблем с заданиями <a href="mailto:CTF@utmn.ru">CTF@utmn.ru</a>
-                        </div>
-                        <div class="button-contact-email-line">
-                            По организационным вопросам <a href="mailto:CTF@utmn.ru">CTF@utmn.ru</a>
+                            По вопросам техподдержки, проблем с заданиями или организационным вопросам пишите нам на
+                            почту: <a href="mailto:CTF@utmn.ru">CTF@utmn.ru</a>
                         </div>
                     </div>
                     <div class="bottom-contacts-block">
